--- a/Main_Head.css
+++ b/Main_Head.css
@@ -1,20 +1,69 @@
-.Heading {
-    text-align: center;
+:root {
+    --blue: #0032bd;
 }
 
-.Heading_Border {
+.Whole {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.Top_Nav .Top_Nav_Button {
+    width: 7.5%;
+    background-color:transparent;
+    border: none;
+    color: black;
+    margin: .65% .25% .25% .25%;
+    padding: none;
+    text-align: center;
+    text-decoration: none;
+    font-size: 1.5vw;
+    cursor: pointer;
+    float: right;
+}
+
+.Top_Nav .Top_Nav_Button:hover {
+    text-decoration: underline;
+}
+
+.Title .Title_Button {
+    background-color: transparent;
+    color: black;
+    border: none;
+    text-align: left;
+    font-size: 2.5vw;
+    font-weight: 500;
+    margin-top: none;
+    margin-bottom: none;
+    margin-left: 1.25%;
+    margin-right: auto;
+    padding: none;
+    cursor: pointer;
+}
+
+.Title_Button:hover {
+    color: var(--blue);
+}
+
+.Title_Border {
     display: block;
     margin-top: 2px;
-    margin-bottom: 2px;
+    margin-bottom: 1px;
     margin-left: 1.25%;
     margin-right: 1.25%;
-    border-width: 0px;
-    color: black;
-    background-color: black;
-    height: 3px;
+    border-width: .5px;  
+    background-color: white;
+    height: .5px;
 }
 
 .Body {
     margin-left: 1.25%;
     margin-right: 1.25%;
+}
+
+.Footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    margin-left: 1.8%;
+    margin-bottom: 1.8%;
+
 }
