--- a/Functions_TheBasics_Style.css
+++ b/Functions_TheBasics_Style.css
@@ -8,7 +8,7 @@
     color: black;
     border: none;
     text-align: left;
-    font-size: 1.8vw;
+    font-size: calc(16px + 0.75vw);
     font-weight: 600;
     margin-top: none;
     margin-bottom: none;
@@ -20,4 +20,10 @@
 
 .heading_button:hover {
     color: var(--blue);
+}
+
+.bigFigure {
+    width: 70%;
+    height: auto;
+    min-width: 450px;
 }
