--- a/calculus1_style.css
+++ b/calculus1_style.css
@@ -8,7 +8,7 @@
     color: black;
     border: none;
     text-align: left;
-    font-size: 1.8vw;
+    font-size: calc(16px + 0.75vw);
     font-weight: 600;
     margin-top: none;
     margin-bottom: none;
