Finished the 'Limit of a Function' page and started the 'Undefined Limits' page. Changed the course title from 'Calculus I' to 'Single Variable Calculus' in order to fit both calc 1 and 2 in one course. Also finalized the lesson plan for single variable calculus.

--- a/Functions_TheBasics_Style.css
+++ b/Functions_TheBasics_Style.css
@@ -22,8 +22,15 @@
     color: var(--blue);
 }
 
+.center_text {
+    text-align: center;
+}
+
 .bigFigure {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     width: 70%;
     height: auto;
-    min-width: 450px;
+    min-width: 320px;
 }
