--- a/LimitOfAFunction_Style.css
+++ b/LimitOfAFunction_Style.css
@@ -23,12 +23,18 @@
 }
 
 .table {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     width: 40%;
     height: auto;
-    min-width: 400px;
+    min-width: 320px;
 }
 
 .figure {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     width: 22.5%;
     height: auto;
     min-width: 250px;
