Finished Problem Set 1 Solutions, modified a few things on all pages (meta stuff), also added a 'Body_style' sheet that goes to all pages, rather than having one stylesheet per page.

--- a/index_style.css
+++ b/index_style.css
@@ -22,8 +22,7 @@
     text-align: left;
     float: left;
     margin-left: 2%;
-    margin-top: none
-    font-weight: 600;
+    margin-top: none;
 }
 
 a.Subject_Links {
