--- a/Main_Head.css
+++ b/Main_Head.css
@@ -15,6 +15,27 @@
     .Title_image:hover {
         background-image: url('WebsiteLogo_Hover.png');
     }
+
+    .menuButton {
+        border: 2px solid var(--blue);
+    }
+
+    .hamburger {
+        fill: var(--blue);
+    }
+
+    .Top_Nav_Button {
+        border: 2px solid black;
+    }
+
+    .Title_Border {
+        background-color: white;
+    }
+
+    .Top_Nav_Button:hover {
+        border: 2px solid var(--blue);
+        text-decoration: underline 3px var(--blue);
+    }
 }
 
 @media (prefers-color-scheme: dark) {
@@ -25,58 +46,166 @@
     .Title_image:hover {
         background-image: url('WebsiteLogo_Hover_Dark.png');
     }
+
+    .menuButton {
+        border: 2px solid var(--lightblue);
+    }
+
+    .hamburger {
+        fill: var(--lightblue);
+    }
+
+    .Top_Nav_Button {
+        border: 2px solid white;
+    }
+
+    .Top_Nav_Button:hover {
+        border: 2px solid var(--lightblue);
+        text-decoration: underline 3px var(--lightblue);
+    }
+
+    .Title_Border {
+        background-color: black;
+    }
+}
+
+@media (max-width: 600px) {
+    .menuButton {
+        float: right;
+        background: transparent;
+        border-radius: 0.25rem;
+        cursor: pointer;
+    }
+    
+    .menuButton .line {
+        transition:
+            y 300ms ease-in 300ms,
+            rotate 300ms ease-in,
+            opacity 0ms 300ms;
+        ;
+        transform-origin: center;
+    }
+
+    .menuButton[aria-expanded="true"] .line {
+        transition:
+            y 300ms ease-in,
+            rotate 300ms ease-in 300ms,
+            opacity 0ms 300ms;
+        ;
+    }
+    
+    .menuButton[aria-expanded="true"] :is(.top, .bottom) {
+        y: 45;
+    }
+    
+    .menuButton[aria-expanded="true"] :is(.top) {
+        rotate: -45deg;
+    }
+
+    .menuButton[aria-expanded="true"] .middle {
+        opacity: 0;
+    }
+
+    .menuButton[aria-expanded="true"] .bottom {
+        rotate: 45deg;
+    }
+
+    .menuClass {
+        display: none;
+        flex-direction: column;
+    }
+    
+    .Top_Nav_Button {
+        display: block;
+        font-weight: 500;
+        border-radius: 1rem;
+        background-color:transparent;
+        margin: calc(8px + 0.1%) 1.25% 0 1.25%;
+        padding: none;
+        text-align: center;
+        text-decoration: none;
+        font-size: calc(1.2rem);
+        cursor: pointer;
+    }
+    
+    .Top_Nav_Button:hover {
+        font-weight: 700;
+        letter-spacing: 0.02em;
+        text-decoration: none;
+    }
+
+    #Title_Border2 {
+        display: none;
+    }
+
+    #Title_Border1 {
+        display: block;
+        margin: 2px 1.25% 1px 1.25%;
+        border-width: .5px;  
+        height: 1px;
+    }
+}
+
+@media (min-width: 601px) {
+    .menuButton{
+        display: none;
+    }
+
+    #menu {
+        display: flex;
+        flex-direction: row;
+        float: right;
+        margin: 0 calc(1rem + 1.25%) 0 0;
+    }
+
+    .Top_Nav_Button {
+        display: block;
+        font-weight: 500;
+        border: none;
+        background-color:transparent;
+        margin: calc(8px + 0.1%) 1.25% 0 1.25%;
+        padding: none;
+        text-align: center;
+        text-decoration: none;
+        font-size: 1.5rem;
+        cursor: pointer;
+    }
+    
+    .Top_Nav_Button:hover {
+        border: none;
+        font-weight: 700;
+        letter-spacing: 0.02em;
+    }
+
+    #Title_Border1 {
+        display: none;
+        margin: none;
+        height: 0;
+        border: none;
+    }
+
+    #Title_Border2 {
+        display: block;
+        margin: 2px 1.25% 1px 1.25%;
+        border-width: .5px;  
+        height: 1px;
+    }
 }
 
 .Title_image {
-    top: 0;
-    left: 0;
     background-size: 100px auto;
     background-color: transparent;
-    height: 45px;
-    width: 100px;
+    height: 2.9rem;
+    width: 6.3rem;
     border: none;
-    margin-top: none;
-    margin-bottom: none;
     margin-left: 1.25%;
-    margin-right: none;
-    padding: none;
     cursor: pointer;
+    transition: 0.25s;
 }
 
 .Title_image:hover {
     background-size: 100px auto;
     cursor: pointer;
-}
-
-.Top_Nav_Button {
-    top: 0;
-    right: 0;
-    font-weight: 500;
-    width: calc(90px + 0.75%);
-    background-color:transparent;
-    border: none;
-    margin: calc(8px + 0.1%) 0% 0% 0%;
-    padding: none;
-    text-align: center;
-    text-decoration: none;
-    font-size: calc(14px + 0.75vw);
-    cursor: pointer;
-    float: right;
-}
-
-.Top_Nav_Button:hover {
-    text-decoration: underline var(--blue);
-}
-
-.Title_Border {
-    display: block;
-    margin-top: 2px;
-    margin-bottom: 1px;
-    margin-left: 1.25%;
-    margin-right: 1.25%;
-    border-width: .5px;  
-    background-color: white;
-    height: .5px;
 }
 
 .Body {
