--- a/Body_style.css
+++ b/Body_style.css
@@ -58,6 +58,10 @@ body {
         background-color: var(--blue);
         color: white;
     }
+
+    .definition {
+        border: 4px solid black;
+    }
 }
 
 @media (prefers-color-scheme: dark) {
@@ -95,6 +99,10 @@ body {
     
     .start_button:hover {
         background-color: var(--lightblue);
+    }
+
+    .definition {
+        border: 4px solid white;
     }
 }
 
@@ -248,5 +256,19 @@ body {
     max-height: 2000px;
     overflow: auto;
     transition: max-height 0.75s;
+}
+
+.definition {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 50rem;
+    padding: 0.5rem;
+}
+
+.def_title {
+    display: block;
+    font-size: 1.3rem;
+    text-align: center;
 }
 /*End Lessons Style*/
