--- a/styles/Body_style.css
+++ b/styles/Body_style.css
@@ -182,8 +182,12 @@ body {
     justify-content: space-between;
 }
 
+.no-marker {
+    list-style-type: none;
+  }  
+
 #Lesson_plan {
-    list-style-type: upper-alpha;
+    list-style-type: decimal;
 }
 
 .Lesson {
