--- a/styles/Body_style.css
+++ b/styles/Body_style.css
@@ -42,7 +42,8 @@ body {
     }
 
     .slideout, .slidein {
-        background-color: whitesmoke;
+        background-color: none;
+        border-left: 0.15rem dashed whitesmoke;
     }
     
     .heading_button:hover, .solutionButton:hover {
@@ -60,7 +61,8 @@ body {
     }
 
     .definition {
-        border: 4px solid black;
+        border: none;
+        border-left: 0.15rem solid black;
     }
 }
 
@@ -81,7 +83,8 @@ body {
     }
 
     .slideout, .slidein {
-        background-color: #152028;
+        background-color: none;
+        border-left: 0.15rem dotted white;
     }
 
     #invert {
@@ -102,7 +105,8 @@ body {
     }
 
     .definition {
-        border: 4px solid white;
+        border: none;
+        border-left: 0.15rem solid white;
     }
 }
 
@@ -240,7 +244,7 @@ body {
 }
 
 .solutionButton {
-    margin: auto auto auto -.3rem;
+    margin: 0.75rem auto 0.75rem -.3rem;
     background-color: transparent;
     border: none;
     cursor: pointer;
@@ -258,21 +262,23 @@ body {
 
 .slidein {
     max-height: 2000px;
+    padding: 0.75rem;
     overflow: auto;
     transition: max-height 0.75s;
+    margin-bottom: 0.75rem;
 }
 
 .definition {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    max-width: 50rem;
-    padding: 0.5rem;
+    /* max-width: 90%; */
+    padding: 0.75rem;
 }
 
 .def_title {
     display: block;
-    font-size: 1.3rem;
-    text-align: center;
+    text-align: left;
+    margin-bottom: 0.75rem;
 }
 /*End Lessons Style*/
