Updated jupyter.css and initiated images.html
The styling changed on jupyter notebook converion to html, so I had to update my styling.
I also added an 'images.html' file to the main navigation.
I've uploaded the images and updated blog.css to accomodate for the new file.
I anticipate issues in page loading time since I've got all images on one page, so I will look into how to take care of that.

--- a/style/blog.css
+++ b/style/blog.css
@@ -25,6 +25,9 @@ body {
         width: auto;
     }
 
+    img.image {
+        width: 100%;
+    }
     .post-separator {
         height: 1px;
         width: 98%;
@@ -46,7 +49,7 @@ body {
         flex-direction: row;
     }
 
-    article.post {
+    article.post, img.image {
         width: 340px;
     }
 
@@ -165,6 +168,10 @@ a.footnote {
     width: calc(100% - 20px);
 }
 
+.image {
+    margin: 10px 0;
+}
+
 .theorem {
     display: block;
     margin-left: auto;
@@ -182,22 +189,18 @@ a.footnote {
 }
 
 .jupyter-frame {
-    background: transparent;
-    position: relative;
+    width: calc(100% + 26px);
+    margin: 0px -25px;
 }
 
 @media (max-width: 699px) {
-    .jupyter-frame {
-        height: 7300px;
-        width: calc(100% + 44px);
-        left: -44px;
+    #file-2023-11-18 {
+        height: 7000px;
     }
 }
 
 @media (min-width: 700px) {
-    .jupyter-frame {
-        height: 5578px;
-        width: calc(100% + 123px);
-        left: -99px;
+    #file-2023-11-18 {
+        height: 6226px;
     }
 }
