--- a/style/blog.css
+++ b/style/blog.css
@@ -204,3 +204,15 @@ a.footnote {
         height: 6226px;
     }
 }
+
+figure {
+    text-align: center;
+    padding: 0;
+    margin: 0 0 50px 0;
+}
+
+img.figure {
+    width: 100%;
+    padding: 0;
+    margin: 0;
+}
