--- a/style/blog.css
+++ b/style/blog.css
@@ -199,7 +199,7 @@ a.footnote {
     }
 
     #file-2024-04-20 {
-        height: 13983px;
+        height: 7707px;
     }
 }
 
@@ -208,9 +208,9 @@ a.footnote {
         height: 6226px;
     }
 
-    /* #file-2024-04-20 {
-        height: 9000px;
-    } */
+    #file-2024-04-20 {
+        height: 5026px;
+    }
 }
 
 figure {
