--- a/style/blog.css
+++ b/style/blog.css
@@ -152,7 +152,7 @@ a.footnote {
     font-size: smaller;
 }
 
-.blog-post {
+.blog-post, .problems {
     padding-left: 20px;
 }
 
@@ -164,7 +164,7 @@ a.footnote {
     margin: 0 0 20px 0;
 }
 
-.text {
+.text, .problems {
     width: calc(100% - 20px);
 }
 
@@ -223,4 +223,14 @@ img.figure {
     width: 100%;
     padding: 0;
     margin: 0;
+}
+
+.problems details summary {
+    cursor: pointer;
+    margin: 20px 0;
+}
+
+.solution {
+    padding: 10px;
+    border-left: 1px solid white;
 }
